--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
+    <title>My todos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Todo App</h1>
-        <form id="todoForm">
-            <input type="text" id="todoInput" placeholder="Todo">
-            <input type="text" id="descInput" placeholder="Description">
+        <h1>Todo</h1>
+        <form id="todoForm" r>
+            <input type="text" id="todoInput" placeholder="Todo" required>
+            <input type="text" id="descInput" placeholder="Description" required>
             <button type="submit">Add Todo</button>
         </form>
         <div id="todosContainer">
-            <h2>Todo List</h2>
-            <ul id="todos"></ul>
-            <h2>Completed Todos</h2>
-            <ul id="completedTodos"></ul>
+            <h2>Pending Todos List</h2>
+            <ol id="todos"></ol>
+            <h2>Completed Todos List</h2>
+            <ol id="completedTodos"></ol>
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 </body>
 
 </html>
